Bug fixes on rendering the error message

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
                         var data = JSON.parse(this.responseText);
                         var html = ejs.render(template.siteListTemplate, { sites: data.sites }); // Render ejs client side with EJS script (template1 corresponds to the artists template)
                         $('#ren').html(html);
-                    } else {
+                    } else if(this.readyState == 4 && this.status !== 400) {
                         var errorString = `<p class="text-danger">URL not found or required resource may be currenlt unavailable</p>`;
                         var html = ejs.render(errorString); // Render ejs client side with EJS script (template1 corresponds to the artists template)
                         $('#ren').html(html);
